[gd_scene load_steps=24 format=2]

[ext_resource path="res://spriteframes/Enemy.tres" type="SpriteFrames" id=1]
[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/menus/buttons/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/menus/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://spriteframes/Player.tres" type="SpriteFrames" id=5]
[ext_resource path="res://fonts/Enchanted Land.otf" type="DynamicFontData" id=6]
[ext_resource path="res://sfx/characters/enemies/captured/UNDEAD TRANSFORMATION COMPLETE 2.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/characters/enemies/captured/ENEMY CAPTURE 1.wav" type="AudioStream" id=8]
[ext_resource path="res://images/menu bg/bg menu v2.png" type="Texture" id=9]
[ext_resource path="res://images/effects/Circle UI.png" type="Texture" id=10]
[ext_resource path="res://music/menus/WGJ150_-_V1.1_Loop.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/menus/buttons/LinkButton.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="InputEventKey" id=11]
scancode = 32

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[node name="GifMenu" type="CanvasModulate"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.733333, 0.384314, 0.843137, 1 )
margin_right = 956.0
margin_bottom = 531.0
rect_scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 66.3181
margin_top = 4.02286
margin_right = 506.318
margin_bottom = 154.023
custom_fonts/font = SubResource( 1 )
text = "The Scourge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel2" type="Label" parent="TitleLabel"]
margin_left = 222.828
margin_top = 91.6339
margin_right = 508.828
margin_bottom = 241.634
custom_fonts/font = SubResource( 1 )
text = "Defense"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSprites" type="Node2D" parent="."]
position = Vector2( 7.03234, 38.6779 )
scale = Vector2( 0.9, 0.9 )

[node name="PlayerSprite" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 341.487, 336.579 )
scale = Vector2( 5, 5 )
frames = ExtResource( 5 )
animation = "idle"
frame = 1
playing = true
__meta__ = {
"_editor_description_": "w"
}

[node name="SpiritCircle" type="Sprite" parent="CharacterSprites/PlayerSprite"]
visible = false
show_behind_parent = true
position = Vector2( 0.455658, 17.3157 )
scale = Vector2( 0.260296, 0.0635462 )
texture = ExtResource( 10 )

[node name="EnemySprite1" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 560.095, 294.32 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="EnemySprite2" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 591.829, 359.373 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="EnemySprite3" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 517.255, 402.213 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="EnemySprite4" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 149.147, 303.054 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
playing = true
flip_h = true

[node name="EnemySprite5" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 96.787, 369.695 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
playing = true
flip_h = true

[node name="EnemySprite6" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 177.707, 410.948 )
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 702.425
margin_top = 247.996
margin_right = 865.425
margin_bottom = 443.996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="VBox" instance=ExtResource( 3 )]
margin_right = 163.0
margin_bottom = 100.0
custom_styles/focus = SubResource( 2 )
shortcut = SubResource( 12 )
dest = "res://src/levels/Level0.tscn"

[node name="InstructionsLabel" type="Label" parent="VBox"]
margin_top = 104.0
margin_right = 163.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 3 )
text = "WASD/ Arrow Keys to Move
J to Attack
K to Roll
L to Spell Summon
Spacebar to Jump"
align = 1

[node name="VersionLabel" type="Label" parent="."]
margin_left = 781.227
margin_top = 446.172
margin_right = 944.227
margin_bottom = 519.172
custom_fonts/font = SubResource( 4 )
text = "v1.0
Made for the Weekly Game Jam
Week 150
THeme: \"You're the Enemy\""
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="HBoxContainer" parent="."]
margin_left = 9.94165
margin_top = 458.519
margin_right = 659.942
margin_bottom = 590.519
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LinkButton1" parent="Credits" instance=ExtResource( 12 )]
margin_right = 184.0
margin_bottom = 131.0
custom_styles/focus = SubResource( 10 )
text = "Programming by Efigi"

[node name="LinkButton2" parent="Credits" instance=ExtResource( 12 )]
margin_left = 188.0
margin_right = 327.0
margin_bottom = 131.0
custom_styles/focus = SubResource( 6 )
text = "Graphics by Sue"

[node name="LinkButton3" parent="Credits" instance=ExtResource( 12 )]
margin_left = 331.0
margin_right = 556.0
margin_bottom = 131.0
custom_styles/focus = SubResource( 7 )
text = "Music by Mikey Macapagal"

[node name="LinkButton4" parent="Credits" instance=ExtResource( 12 )]
margin_left = 560.0
margin_right = 728.0
margin_bottom = 131.0
custom_styles/focus = SubResource( 8 )
text = "SFX by Nathan Reed"

[node name="CreditsLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 545.816
margin_top = 428.965
margin_right = 959.816
margin_bottom = 501.965
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "Programming by [url= https://www.efigi.itch.io/]Efigi[/url]
Graphics by Sue
Music by [url= https://www.michaelmacapagal.com/]Mikey Macapagal[/url]
SFX by [url= https://www.dboydchipmusic.com/]Nathan Reed[/url]"
text = "Programming by Efigi
Graphics by Sue
Music by Mikey Macapagal
SFX by Nathan Reed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="SpellSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SpellSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="animation_finished" from="CharacterSprites/PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
[connection signal="pressed" from="VBox/StartButton" to="." method="_on_StartButton_pressed"]
